--- a/src/commons/components/multiSelector/MultiSelector.module.scss
+++ b/src/commons/components/multiSelector/MultiSelector.module.scss
@@ -19,12 +19,12 @@
     @include ms-xxlPush10;
   }
 
-  .halfColumns {
+  .selectorColumns {
     @include ms-Grid-col;
-    @include ms-sm6;
-    @include ms-md6;
-    @include ms-lg6;
-    @include ms-xl6;
-    @include ms-xxl6;
+    @include ms-sm4;
+    @include ms-md4;
+    @include ms-lg4;
+    @include ms-xl4;
+    @include ms-xxl4;
   }
 }
